06 - currency-conversion-cloud/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: gateway-ingress
   annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
   rules:
   -  http:
         paths:
         -  path: /currency-exchange/*
            backend:
               serviceName: currency-exchange
               servicePort: 8000
         -  path: /currency-conversion/*
            backend:
               serviceName: currency-conversion
               servicePort: 8100
